# python-gmail

./: .editorconfig  .env.example  CODING_STYLE.md  ENVIRONMENT_SETUP.md  README.md  STYLE_SUMMARY.md  __init__.py  check_code_quality.sh  fix_code_style.sh  pyproject.toml  python-gmail.py  python_gmail.py  requirements.txt  test_blog_search_real.py  test_direct_blog_search.py  test_python_gmail.py  test_rss_feed.py  test_url_extraction.py  test_url_extraction_methods.py
module/: __init__.py  blog_utils.py  network_utils.py  news_utils.py  weather_utils.py
tests/: __init__.py  test_blog_utils.py  test_network_utils.py  test_news_utils.py  test_python_gmail.py  test_weather_utils.py
